--- a/internal/web/templates/pages/users/new.html
+++ b/internal/web/templates/pages/users/new.html
@@ -68,7 +68,7 @@
                           hx-target="this"
                           hx-swap="outerHTML">
                         
-                        <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+                        <input type="hidden" name="_token" value="{{.CSRFToken}}">
                         
                         <!-- Personal Information -->
                         <fieldset>
