--- a/internal/web/templates/pages/dashboard.html
+++ b/internal/web/templates/pages/dashboard.html
@@ -54,7 +54,7 @@
                                 >
                                     <input
                                         type="hidden"
-                                        name="csrf_token"
+                                        name="_token"
                                         value="{{.CSRFToken}}"
                                     />
                                     <button type="submit" class="outline">
