--- a/internal/web/templates/pages/transactions/new.html
+++ b/internal/web/templates/pages/transactions/new.html
@@ -71,7 +71,7 @@
                           hx-target="#form-errors"
                           hx-swap="outerHTML">
                         
-                        <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+                        <input type="hidden" name="_token" value="{{.CSRFToken}}">
                         
                         <!-- Transaction Basic Info -->
                         <fieldset>
