--- a/internal/web/templates/pages/transactions/new.html
+++ b/internal/web/templates/pages/transactions/new.html
@@ -13,6 +13,9 @@
     <!-- HTMX -->
     <script src="/static/js/htmx.min.js"></script>
     
+    <!-- CSRF Token for HTMX -->
+    {{if .CSRFToken}}<meta name="csrf-token" content="{{.CSRFToken}}">{{end}}
+    
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/static/img/favicon.ico">
 </head>
@@ -50,8 +53,9 @@
         </div>
         
         <!-- Error Messages -->
+        <div id="form-errors">
         {{if .PageData.Errors}}
-        <div class="alert alert-danger" role="alert" id="form-errors">
+        <div class="alert alert-danger" role="alert">
             <ul style="margin: 0; padding-left: 1rem;">
                 {{range $field, $error := .PageData.Errors}}
                 <li>{{$error}}</li>
@@ -59,6 +63,7 @@
             </ul>
         </div>
         {{end}}
+        </div>
         
         <!-- Add Transaction Form -->
         <section class="form-section">
