--- a/internal/web/templates/components/form_errors.html
+++ b/internal/web/templates/components/form_errors.html
@@ -1,5 +1,5 @@
 {{define "components/form_errors"}} {{if .Errors}}
-<div class="alert alert-error" role="alert" id="form-errors">
+<div class="alert alert-danger" role="alert">
     <ul style="margin: 0; padding-left: 1rem">
         {{range $field, $error := .Errors}}
         <li>{{$error}}</li>
